# markdown-pytest

./: README.md  markdown_pytest.py  pyproject.toml  tests.md
.github/workflows/: tests.yml
tests/: fixtures.md  fixtures_basic.md  fixtures_hidden.md  fixtures_interleaved.md  fixtures_split.md  hidden_setup_assert.md  marks_tests.md  non_python_fence_split.md  non_python_fences.md  subprocess_tests.md  test_splitting.py  tests.md
tests/cli/: test_cli.py
