[project]
name = "markdown-pytest"
version = "0.3.2"
license = "Apache-2.0"
description = "Pytest plugin for runs tests directly from Markdown files"
authors = [{name = "Dmitry Orlov", email = "me@mosquito.su"}]
readme = "README.md"
keywords = ["pytest", "markdown", "documentation"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]
dependencies = [
    "pytest-subtests",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markdown_pytest.py"]

[project.entry-points.pytest11]
markdown-pytest = "markdown_pytest"

[project.urls]
"Source" = "https://github.com/mosquito/markdown-pytest"
"Tracker" = "https://github.com/mosquito/markdown-pytest/issues"
"Documentation" = "https://github.com/mosquito/markdown-pytest/blob/master/README.rst"
