[project]
name = "markdown-pytest"
version = "0.3.2"
license = "Apache-2.0"
description = "Pytest plugin for runs tests directly from Markdown files"
authors = [{name = "Dmitry Orlov", email = "me@mosquito.su"}]
readme = "README.md"
keywords = ["pytest", "markdown", "documentation"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]
dependencies = [
    "pytest-subtests",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markdown_pytest.py"]

[project.entry-points.pytest11]
markdown-pytest = "markdown_pytest"

[project.urls]
"Source" = "https://github.com/mosquito/markdown-pytest"
"Tracker" = "https://github.com/mosquito/markdown-pytest/issues"
"Documentation" = "https://github.com/mosquito/markdown-pytest/blob/master/README.rst"

[tool.ruff]
line-length = 80
exclude = [
    ".git",
    ".tox",
    ".venv",
    "build",
    "dist",
    "env",
]

[tool.ruff.lint]
select = ["E", "W", "F", "C90"]
ignore = ["C901"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = [
    "markdown_pytest.py",
]
